@@ -2,7 +2,7 @@
 .\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
 .\" Instead of manually editing it, you probably should edit the DocBook XML
 .\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
-.TH "NMAP" "1" "11/17/2005" "" "Nmap Reference Guide"
+.TH "NMAP" "1" "11/27/2005" "" "Nmap Reference Guide"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -994,7 +994,7 @@ and
 \fIXscan.xml\fR
 respectively.
 .PP
-Nmap also offers options to control scan verbosity and to append to output files rather than clobbering them. All of these options are described belowe.
+Nmap also offers options to control scan verbosity and to append to output files rather than clobbering them. All of these options are described below.
 .PP
 \fBNmap Output Formats\fR
 .TP
@@ -1018,12 +1018,14 @@ in Perl CPAN. In almost all cases that a non\-trivial application interfaces wit
 .sp
 The XML output references an XSL stylesheet which can be used to format the results as HTML. The easiest way to use this is simply to load the XML output in a web browser such as Firefox or IE. By default, this will only work on the machine you ran Nmap on (or a similarly configured one) due to the hard\-coded
 \fInmap.xsl\fR
-filesystem path. See the
+filesystem path. Use the
+\fB\-\-webxml\fR
+or
 \fB\-\-stylesheet\fR
-option for a way to create a portable XML file that renders as HTML on any web\-connected machine.
+options to create portable XML files that render as HTML on any web\-connected machine.
 .TP
 \fB\-oS <filespec>\fR (ScRipT KIdd|3 oUTpuT)
-Script kiddie output is like interactive output, except that it is post\-processed to better suit the 'l33t HaXXorZ who previously looked down on Nmap due to its consistent capitalization and spelling. Humor impaired people should note that this option is making fun of the script kiddies before flaming me for supposedly
+Script kiddie output is like interactive output, except that it is post\-processed to better suit the l33t HaXXorZ who previously looked down on Nmap due to its consistent capitalization and spelling. Humor impaired people should note that this option is making fun of the script kiddies before flaming me for supposedly
 \(lqhelping them\(rq.
 .TP
 \fB\-oG <filespec>\fR (Grepable output)
@@ -1119,9 +1121,14 @@ where it was initially installed by Nmap (or in the current working directory on
 \fInmap.xsl\fR
 from the filesystem and use it to render results. If you wish to use a different stylesheet, specify it as the argument to
 \fB\-\-stylesheet\fR. You must pass the full pathname or URL. One common invocation is
-\fB\-\-stylesheet http://www.insecure.org/nmap/data/nmap.xsl\fR
-. This tells a browser to load the latest version of the stylesheet from Insecure.Org. This makes it easier to view results on a machine that doesn't have Nmap (and thus
+\fB\-\-stylesheet http://www.insecure.org/nmap/data/nmap.xsl\fR. This tells a browser to load the latest version of the stylesheet from Insecure.Org. The
+\fB\-\-webxml\fR
+option does the same thing with less typing and memorization. Loading the XSL from Insecure.Org makes it easier to view results on a machine that doesn't have Nmap (and thus
 \fInmap.xsl\fR) installed. So the URL is often more useful, but the local filesystem location of nmap.xsl is used by default for privacy reasons.
+.TP
+\fB\-\-webxml\fR (Load stylesheet from Insecure.Org)
+This convenience option is simply an alias for
+\fB\-\-stylesheet http://www.insecure.org/nmap/data/nmap.xsl\fR.
 .TP
 \fB\-\-no_stylesheet\fR (Omit XSL stylesheet declaration from XML)
 Specify this option to prevent Nmap from associating any XSL stylesheet with its XML output. The
